--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Document</title>
 </head>
 <body>
- <h1>Vai ser uma imagem aqui</h1>   
- 
-</body>
+ <h1>Colégio Estadual Tancredo Neves</h1>   
+    <header>  
+        <img src="img.jpeg" alt="">
+        <ul>
+            <li>O Colégio Estadual Tancredo Neves – Ensino Fundamental Médio e Profissionalizante está localizado na cidade de São João, onde atende 849 alunos da Rede Estadual de Ensino. Atende alunos do 6º ao 9º ano do Ensino Fundamental , Curso Técnico em Administração e Ensino Médio, além de projetos em contra turno como CELEM Espanhol, Edutech, aulas de Xadrez e reforço para alunos com dificuldade de aprendizagem. O horário de funcionamento são período da manhã, tarde e noite.
+            </li>
+            <li> Por:Julia Debona</li>
+        </ul>
+    </header>
+    
+    </body>
 </html>
