--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <li> Por:Julia Debona</li>
         </ul>
     </header>
-    
-    </body>
-</html>
+    <section class="escola"
+    h2 clas="escola-titulo"> sobre a minha sala</h2 
+     class=”escola-texto-um”></p>
+    <img src="hiara.png" alt=" Hiara">
+    <img scr=""alt=
+    <p class
